# Manwe

./: .gitignore  .tsan-suppressions.txt  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  PERFORMANCE.md  PHILOSOPHY.md  README.md  itask.hpp  iwaitable.hpp  queue.cpp  queue.hpp  waitable.cpp  waitable.hpp  yarns.cpp  yarns.hpp
.github/workflows/: ci.yml
Embedded/: CMakeLists.txt
Embedded/includes/: Gpio.h  SerialPort.h
Embedded/src/: Gpio.cpp  SerialPort.cpp
Soccer/: CMakeLists.txt
Soccer/includes/: BufferedReader.h  Http2.h  HttpClient.h  HttpServer.h  IcmpEcho.h  Overlapped.h  RawSocket.h  Soccer.h  SocketAddress.h  SocketException.h  TcpListener.h  TcpServer.h  TcpStream.h  TlsListener.h  TlsStream.h  UdpSocket.h  WebSocket.h
Soccer/src/: Http2.cpp  RawSocket.cpp  SocketAddress.cpp  TcpListener.cpp  TcpStream.cpp  TlsListener.cpp  TlsStream.cpp  UdpSocket.cpp  WebSocket.cpp
UnitTest/: CMakeLists.txt  test.cpp
UnitTest/Includes/: catch.hpp
Wire/: CMakeLists.txt
Wire/includes/: BoundedChannel.h  Centraline.hpp  Channel.h  Epoc.hpp  Select.h  TelegraphSignal.h  Wire.h  iEvent.hpp
WireTest/: CMakeLists.txt  main.cpp  test.hpp
Yarn/: CMakeLists.txt
Yarn/includes/: AsyncSync.h  Coroutines.h  Definitions.h  Definitions.hpp  Fiber.h  Fiber.hpp  FileIo.h  IScheduler.h  IScheduler.hpp  ITask.h  ITask.hpp  IWaitable.h  IWaitable.hpp  IoAwaiters.h  JoinHandle.h  Log.h  MPMCQueue.h  Metrics.h  PlatformNet.h  RandomScheduler.h  RandomScheduler.hpp  Reactor.h  SignalSet.h  SmallObjectPool.h  StopExecutionException.h  StopExecutionException.hpp  Stream.h  Timeout.h  Timers.h  Trace.h  Waitable.h  Waitable.hpp  WhenAll.h  WhenAny.h  WindowsOverlapped.h  WorkStealingDeque.h  Workload.h  Workload.hpp  Yarn.h  Yarn.hpp  (+2 more)
Yarn/src/: AsyncSync.cpp  Fiber.cpp  Log.cpp  Metrics.cpp  RandomScheduler.cpp  Reactor.cpp  SignalSet.cpp  StopExecutionException.cpp  Trace.cpp  Waitable.cpp  Workload.cpp  Yarn.cpp  YarnBall.cpp
YarnTests/: CMakeLists.txt  main.cpp  test_framework.hpp
Yarns/: CMakeLists.txt  Definitions.h  itask.hpp  iwaitable.hpp  queue.hpp  waitable.cpp  waitable.hpp  yarns.cpp  yarns.hpp
Yarns/includes/: AsyncFiber.h  AsyncTask.h  Awaitable.h  BaseThread.h  Definitions.h  Fiber.h  FiberState.h  IFiber.h  IScheduler.h  Limiter.h  RandGenerator.h  RandomScheduler.h  Scheduler.h  Worker.h  iawaitable.hpp  itask.hpp  queue.hpp  system.hpp  yarns.hpp
Yarns/src/: AsyncFiber.cpp  AsyncTask.cpp  Awaitable.cpp  BaseThread.cpp  Fiber.cpp  Limiter.cpp  RandGenerator.cpp  RandomScheduler.cpp  Scheduler.cpp  Worker.cpp  system.cpp  yarns.cpp
benchmarks/: CMakeLists.txt  bench_async_server.cpp  bench_yarn.cpp
cmake/: ManweConfig.cmake.in
docs/: coroutines.md  embedded.md  http2.md  observability.md  reactor.md  soccer.md  testing.md  wire.md  yarn-threadpool.md
examples/: CMakeLists.txt  chat_signals.cpp  echo_server.cpp  graceful_http.cpp  http2_get.cpp  http_get.cpp  http_server.cpp  ping.cpp  producer_consumer.cpp  ws_echo_server.cpp
